# fsistoolx

./: .gitignore  Dockerfile  README.md  go.mod  go.sum
gofunct/: main.go  main_test.go  readme.md
ilf/: .clang-format  .clang-tidy  .dockerignore  Dockerfile  Makefile  README.md  XPATH_EXPRESSIONS.md  XPATH_QUERY_GUIDE.md  anj2.xml  anj3.xml  build_tree_cli  build_tree_kpmr_cli  eval_cli  eval_client  example_risk_profile_tree.xml  gen_xml  inherent_risk_profile_tree.xml  inherent_riskpro_edges  input_kpmr_rp.xml  irp.xml  irp2.xml  kpmr_risk_profile_tree_output.xml  kpmr_riskpro.xml  kpmr_riskpro_tree.xml  kpmr_source_tree.go  kpmr_source_tree_cli  kpmr_tree_output.xml  output_tree_kpmr_rp.xml  query_profile_depth.sh  query_risiko_by_depth.sh  src_inherent_cli  test_tcch  waw.xml  wew.xml
ilfreporter-0.0.1/: CMakeLists.txt  README.md  aha.xml  inherent_riskpro_conf_out.xml
ilfx/: .gitignore  CMakeLists.txt  inherentds_asuransi_out.xml  inherentds_kredit_out.xml  inherentds_likuiditas_out.xml  inherentds_operasional_out.xml  inherentds_stratejik_out.xml  run_all_testdata.sh
ilfxslt-main/: README.md  filter_kpmr_risiko_asuransi.xslt  filter_kpmr_risiko_hukum.xslt  filter_kpmr_risiko_imbalhasil.xslt  filter_kpmr_risiko_intragrup.xslt  filter_kpmr_risiko_investasi.xslt  filter_kpmr_risiko_kepatuhan.xslt  filter_kpmr_risiko_kredit.xslt  filter_kpmr_risiko_likuiditas.xslt  filter_kpmr_risiko_operasional.xslt  filter_kpmr_risiko_pasar.xslt  filter_kpmr_risiko_reputasi.xslt  (+13 more)
thy/: CMakeLists.txt  item.h  lexer.l  main.cpp  parser.y  test_input.txt
xsltcli/: Makefile  (+5 more)
(+942 files in other folders)
